Revamp travel.html structure and add links

--- a/pages/travel.html
+++ b/pages/travel.html
@@ -1,1 +1,71 @@
-<h2>Travel</h2><div class='grid'><button onclick="open('https://www.irctc.co.in')">IRCTC</button><button onclick="open('https://www.makemytrip.com')">MakeMyTrip</button><button onclick="open('https://www.booking.com')">Booking</button></div><script src='../app.js'></script>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Travel | HarDil</title>
+
+  <!-- Mobile & PWA -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="theme-color" content="#4f46e5">
+  <meta name="description" content="HarDil Travel – book trains, buses, flights and hotels">
+
+  <!-- Styles -->
+  <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+
+<header class="hero small">
+  <h1>✈️ Travel</h1>
+  <p>Trains · Buses · Flights · Hotels</p>
+</header>
+
+<main class="app">
+  <section class="card">
+    <div class="grid">
+
+      <a class="app-btn" href="https://www.irctc.co.in" target="_blank" rel="noopener noreferrer">
+        <img src="assets/icons/irctc.png" alt="IRCTC">
+        <span>IRCTC</span>
+      </a>
+
+      <a class="app-btn" href="https://www.makemytrip.com" target="_blank" rel="noopener noreferrer">
+        <img src="assets/icons/makemytrip.png" alt="MakeMyTrip">
+        <span>MakeMyTrip</span>
+      </a>
+
+      <a class="app-btn" href="https://www.booking.com" target="_blank" rel="noopener noreferrer">
+        <img src="assets/icons/booking.png" alt="Booking.com">
+        <span>Booking</span>
+      </a>
+
+      <a class="app-btn" href="https://www.goibibo.com" target="_blank" rel="noopener noreferrer">
+        <img src="assets/icons/goibibo.png" alt="Goibibo">
+        <span>Goibibo</span>
+      </a>
+
+      <a class="app-btn" href="https://www.cleartrip.com" target="_blank" rel="noopener noreferrer">
+        <img src="assets/icons/cleartrip.png" alt="Cleartrip">
+        <span>Cleartrip</span>
+      </a>
+
+      <a class="app-btn" href="https://www.yatra.com" target="_blank" rel="noopener noreferrer">
+        <img src="assets/icons/yatra.png" alt="Yatra">
+        <span>Yatra</span>
+      </a>
+
+      <a class="app-btn" href="https://www.redbus.in" target="_blank" rel="noopener noreferrer">
+        <img src="assets/icons/redbus.png" alt="RedBus">
+        <span>RedBus</span>
+      </a>
+
+    </div>
+  </section>
+</main>
+
+<footer class="footer">
+  <a href="index.html">⬅ Back to Home</a>
+</footer>
+
+</body>
+</html>
