Update ride.html for Ride & Transport section

--- a/pages/ride.html
+++ b/pages/ride.html
@@ -2,41 +2,37 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Personality | HarDil</title>
-
-  <!-- Mobile & PWA -->
+  <title>Ride & Transport | HarDil</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="theme-color" content="#4f46e5">
-  <meta name="description" content="HarDil Personality – learning and self-growth resources">
-
-  <!-- Styles -->
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
 <header class="hero small">
-  <h1>🧠 Personality</h1>
-  <p>Learn · Grow · Improve</p>
+  <h1>🚕 Ride & Transport</h1>
+  <p>Book rides easily</p>
 </header>
 
 <main class="app">
   <section class="card">
     <div class="grid">
 
-      <a class="app-btn" href="https://www.ted.com" target="_blank" rel="noopener noreferrer">
-        <img src="assets/icons/ted.png" alt="TED Talks">
-        <span>TED</span>
+      <a class="app-btn" href="https://m.uber.com" target="_blank">
+        <img src="assets/icons/uber.png"><span>Uber</span>
       </a>
 
-      <a class="app-btn" href="https://www.coursera.org" target="_blank" rel="noopener noreferrer">
-        <img src="assets/icons/coursera.png" alt="Coursera">
-        <span>Coursera</span>
+      <a class="app-btn" href="https://www.olacabs.com" target="_blank">
+        <img src="assets/icons/ola.png"><span>Ola</span>
       </a>
 
-      <a class="app-btn" href="https://www.udemy.com" target="_blank" rel="noopener noreferrer">
-        <img src="assets/icons/udemy.png" alt="Udemy">
-        <span>Udemy</span>
+      <a class="app-btn" href="https://www.rapido.bike" target="_blank">
+        <img src="assets/icons/rapido.png"><span>Rapido</span>
+      </a>
+
+      <a class="app-btn" href="https://www.nammayatri.in" target="_blank">
+        <img src="assets/icons/nammayatri.png"><span>Namma Yatri</span>
       </a>
 
     </div>
