Refactor social media links in social.html

--- a/pages/social.html
+++ b/pages/social.html
@@ -1,12 +1,55 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Social Media | HarDil</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="theme-color" content="#4f46e5">
+  <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+
 <header class="hero small">
   <h1>🌐 Social Media</h1>
+  <p>Stay connected</p>
 </header>
 
-<div class="grid">
-  <a class="app-btn" href="https://web.whatsapp.com" target="_blank">WhatsApp</a>
-  <a class="app-btn" href="https://www.instagram.com" target="_blank">Instagram</a>
-  <a class="app-btn" href="https://mail.google.com" target="_blank">Gmail</a>
-  <a class="app-btn" href="https://web.telegram.org" target="_blank">Telegram</a>
-  <a class="app-btn" href="https://www.facebook.com" target="_blank">Facebook</a>
-  <a class="app-btn" href="https://twitter.com" target="_blank">Twitter</a>
-</div>
+<main class="app">
+  <section class="card">
+    <div class="grid">
+
+      <a class="app-btn" href="https://web.whatsapp.com" target="_blank">
+        <img src="assets/icons/whatsapp.png"><span>WhatsApp</span>
+      </a>
+
+      <a class="app-btn" href="https://www.instagram.com" target="_blank">
+        <img src="assets/icons/instagram.png"><span>Instagram</span>
+      </a>
+
+      <a class="app-btn" href="https://www.facebook.com" target="_blank">
+        <img src="assets/icons/facebook.png"><span>Facebook</span>
+      </a>
+
+      <a class="app-btn" href="https://web.telegram.org" target="_blank">
+        <img src="assets/icons/telegram.png"><span>Telegram</span>
+      </a>
+
+      <a class="app-btn" href="https://twitter.com" target="_blank">
+        <img src="assets/icons/twitter.png"><span>Twitter</span>
+      </a>
+
+      <a class="app-btn" href="https://mail.google.com" target="_blank">
+        <img src="assets/icons/gmail.png"><span>Gmail</span>
+      </a>
+
+    </div>
+  </section>
+</main>
+
+<footer class="footer">
+  <a href="index.html">⬅ Back to Home</a>
+</footer>
+
+</body>
+</html>
