--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8" />
   <title>HarDil</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="theme-color" content="#4f46e5" />
+  <meta name="description" content="HarDil – Family First · One Place for Everything" />
   <link rel="stylesheet" href="style.css" />
 </head>
 
@@ -17,157 +19,109 @@
 
 <main class="app">
 
-  <!-- SOCIAL MEDIA -->
+  <!-- 🌐 SOCIAL MEDIA -->
   <section class="card social">
     <h2>🌐 Social Media</h2>
     <div class="grid">
-      <div class="app-btn" data-url="https://web.whatsapp.com">
-        <img src="assets/icons/whatsapp.png"><span>WhatsApp</span>
-      </div>
-      <div class="app-btn" data-url="https://www.instagram.com">
-        <img src="assets/icons/instagram.png"><span>Instagram</span>
-      </div>
-      <div class="app-btn" data-url="https://mail.google.com">
-        <img src="assets/icons/gmail.png"><span>Gmail</span>
-      </div>
-      <div class="app-btn" data-url="https://web.telegram.org">
-        <img src="assets/icons/telegram.png"><span>Telegram</span>
-      </div>
-      <div class="app-btn" data-url="https://www.facebook.com">
-        <img src="assets/icons/facebook.png"><span>Facebook</span>
-      </div>
-      <div class="app-btn" data-url="https://twitter.com">
-        <img src="assets/icons/twitter.png"><span>Twitter</span>
-      </div>
+      <div class="app-btn" data-url="https://web.whatsapp.com"><img src="assets/icons/whatsapp.png"><span>WhatsApp</span></div>
+      <div class="app-btn" data-url="https://www.instagram.com"><img src="assets/icons/instagram.png"><span>Instagram</span></div>
+      <div class="app-btn" data-url="https://mail.google.com"><img src="assets/icons/gmail.png"><span>Gmail</span></div>
+      <div class="app-btn" data-url="https://web.telegram.org"><img src="assets/icons/telegram.png"><span>Telegram</span></div>
+      <div class="app-btn" data-url="https://www.facebook.com"><img src="assets/icons/facebook.png"><span>Facebook</span></div>
+      <div class="app-btn" data-url="https://twitter.com"><img src="assets/icons/twitter.png"><span>Twitter</span></div>
     </div>
   </section>
 
-  <!-- JOB PORTALS -->
+  <!-- 💼 JOBS & CAREER -->
   <section class="card jobs">
     <h2>💼 Jobs & Career</h2>
     <div class="grid">
-      <div class="app-btn" data-url="https://www.linkedin.com/jobs">
-        <img src="assets/icons/linkedin.png"><span>LinkedIn</span>
-      </div>
-      <div class="app-btn" data-url="https://www.naukri.com">
-        <img src="assets/icons/naukri.png"><span>Naukri</span>
-      </div>
-      <div class="app-btn" data-url="https://www.indeed.com">
-        <img src="assets/icons/indeed.png"><span>Indeed</span>
-      </div>
-      <div class="app-btn" data-url="https://www.glassdoor.com">
-        <img src="assets/icons/glassdoor.png"><span>Glassdoor</span>
-      </div>
-      <div class="app-btn" data-url="https://www.foundit.in">
-        <img src="assets/icons/foundit.png"><span>Foundit</span>
-      </div>
-      <div class="app-btn" data-url="https://unstop.com">
-        <img src="assets/icons/unstop.png"><span>Unstop</span>
-      </div>
-      <div class="app-btn" data-url="https://www.shine.com">
-        <img src="assets/icons/shine.png"><span>Shine</span>
-      </div>
-      <div class="app-btn" data-url="https://cutshort.io">
-        <img src="assets/icons/cutshort.png"><span>CutShort</span>
-      </div>
-      <div class="app-btn" data-url="https://internshala.com">
-        <img src="assets/icons/internshala.png"><span>Internshala</span>
-      </div>
+      <div class="app-btn" data-url="https://www.linkedin.com/jobs"><img src="assets/icons/linkedin.png"><span>LinkedIn</span></div>
+      <div class="app-btn" data-url="https://www.naukri.com"><img src="assets/icons/naukri.png"><span>Naukri</span></div>
+      <div class="app-btn" data-url="https://www.indeed.com"><img src="assets/icons/indeed.png"><span>Indeed</span></div>
+      <div class="app-btn" data-url="https://www.glassdoor.com"><img src="assets/icons/glassdoor.png"><span>Glassdoor</span></div>
+      <div class="app-btn" data-url="https://www.foundit.in"><img src="assets/icons/foundit.png"><span>Foundit</span></div>
+      <div class="app-btn" data-url="https://unstop.com"><img src="assets/icons/unstop.png"><span>Unstop</span></div>
+      <div class="app-btn" data-url="https://www.shine.com"><img src="assets/icons/shine.png"><span>Shine</span></div>
+      <div class="app-btn" data-url="https://cutshort.io"><img src="assets/icons/cutshort.png"><span>CutShort</span></div>
+      <div class="app-btn" data-url="https://internshala.com"><img src="assets/icons/internshala.png"><span>Internshala</span></div>
     </div>
   </section>
 
-  <!-- OTT -->
+  <!-- 🎬 OTT PLATFORMS -->
   <section class="card ott">
     <h2>🎬 OTT Platforms</h2>
     <div class="grid">
-      <div class="app-btn" data-url="https://www.netflix.com">
-        <img src="assets/icons/netflix.png"><span>Netflix</span>
-      </div>
-      <div class="app-btn" data-url="https://www.primevideo.com">
-        <img src="assets/icons/prime.png"><span>Prime Video</span>
-      </div>
-      <div class="app-btn" data-url="https://www.hotstar.com">
-        <img src="assets/icons/hotstar.png"><span>Hotstar</span>
-      </div>
-      <div class="app-btn" data-url="https://www.youtube.com">
-        <img src="assets/icons/youtube.png"><span>YouTube</span>
-      </div>
+      <div class="app-btn" data-url="https://www.netflix.com"><img src="assets/icons/netflix.png"><span>Netflix</span></div>
+      <div class="app-btn" data-url="https://www.primevideo.com"><img src="assets/icons/prime.png"><span>Prime Video</span></div>
+      <div class="app-btn" data-url="https://www.hotstar.com"><img src="assets/icons/hotstar.png"><span>Hotstar</span></div>
+      <div class="app-btn" data-url="https://www.youtube.com"><img src="assets/icons/youtube.png"><span>YouTube</span></div>
+      <div class="app-btn" data-url="https://www.jiocinema.com"><img src="assets/icons/jiocinema.png"><span>JioCinema</span></div>
     </div>
   </section>
 
-  <!-- MUSIC -->
+  <!-- 🎵 MUSIC -->
   <section class="card music">
     <h2>🎵 Music</h2>
     <div class="grid">
-      <div class="app-btn" data-url="https://open.spotify.com">
-        <img src="assets/icons/spotify.png"><span>Spotify</span>
-      </div>
-      <div class="app-btn" data-url="https://music.youtube.com">
-        <img src="assets/icons/youtubemusic.png"><span>YouTube Music</span>
-      </div>
-      <div class="app-btn" data-url="https://gaana.com">
-        <img src="assets/icons/gaana.png"><span>Gaana</span>
-      </div>
-      <div class="app-btn" data-url="https://www.jiosaavn.com">
-        <img src="assets/icons/jiosaavn.png"><span>JioSaavn</span>
-      </div>
+      <div class="app-btn" data-url="https://open.spotify.com"><img src="assets/icons/spotify.png"><span>Spotify</span></div>
+      <div class="app-btn" data-url="https://music.youtube.com"><img src="assets/icons/youtubemusic.png"><span>YouTube Music</span></div>
+      <div class="app-btn" data-url="https://gaana.com"><img src="assets/icons/gaana.png"><span>Gaana</span></div>
+      <div class="app-btn" data-url="https://www.jiosaavn.com"><img src="assets/icons/jiosaavn.png"><span>JioSaavn</span></div>
     </div>
   </section>
 
-  <!-- SHOPPING -->
+  <!-- 🛒 SHOPPING -->
   <section class="card shop">
     <h2>🛒 Shopping</h2>
     <div class="grid">
-      <div class="app-btn" data-url="https://www.amazon.in">
-        <img src="assets/icons/amazon.png"><span>Amazon</span>
-      </div>
-      <div class="app-btn" data-url="https://www.flipkart.com">
-        <img src="assets/icons/flipkart.png"><span>Flipkart</span>
-      </div>
-      <div class="app-btn" data-url="https://www.myntra.com">
-        <img src="assets/icons/myntra.png"><span>Myntra</span>
-      </div>
-      <div class="app-btn" data-url="https://www.ajio.com">
-        <img src="assets/icons/ajio.png"><span>Ajio</span>
-      </div>
+      <div class="app-btn" data-url="https://www.amazon.in"><img src="assets/icons/amazon.png"><span>Amazon</span></div>
+      <div class="app-btn" data-url="https://www.flipkart.com"><img src="assets/icons/flipkart.png"><span>Flipkart</span></div>
+      <div class="app-btn" data-url="https://www.myntra.com"><img src="assets/icons/myntra.png"><span>Myntra</span></div>
+      <div class="app-btn" data-url="https://www.ajio.com"><img src="assets/icons/ajio.png"><span>Ajio</span></div>
+      <div class="app-btn" data-url="https://www.meesho.com"><img src="assets/icons/meesho.png"><span>Meesho</span></div>
     </div>
   </section>
 
-  <!-- TRAVEL -->
+  <!-- ✈️ TRAVEL & RIDE -->
   <section class="card travel">
     <h2>✈️ Travel & Ride</h2>
     <div class="grid">
-      <div class="app-btn" data-url="https://www.irctc.co.in">
-        <img src="assets/icons/irctc.png"><span>IRCTC</span>
-      </div>
-      <div class="app-btn" data-url="https://www.makemytrip.com">
-        <img src="assets/icons/makemytrip.png"><span>MakeMyTrip</span>
-      </div>
-      <div class="app-btn" data-url="https://www.uber.com">
-        <img src="assets/icons/uber.png"><span>Uber</span>
-      </div>
-      <div class="app-btn" data-url="https://www.rapido.bike">
-        <img src="assets/icons/rapido.png"><span>Rapido</span>
-      </div>
+      <div class="app-btn" data-url="https://www.irctc.co.in"><img src="assets/icons/irctc.png"><span>IRCTC</span></div>
+      <div class="app-btn" data-url="https://www.makemytrip.com"><img src="assets/icons/makemytrip.png"><span>MakeMyTrip</span></div>
+      <div class="app-btn" data-url="https://www.uber.com"><img src="assets/icons/uber.png"><span>Uber</span></div>
+      <div class="app-btn" data-url="https://www.rapido.bike"><img src="assets/icons/rapido.png"><span>Rapido</span></div>
+      <div class="app-btn" data-url="https://www.redbus.in"><img src="assets/icons/redbus.png"><span>RedBus</span></div>
     </div>
   </section>
 
-  <!-- HEALTH -->
+  <!-- 🩺 HEALTH -->
   <section class="card health">
     <h2>🩺 Health & Pharmacy</h2>
     <div class="grid">
-      <div class="app-btn" data-url="https://www.1mg.com">
-        <img src="assets/icons/1mg.png"><span>Tata 1mg</span>
-      </div>
-      <div class="app-btn" data-url="https://pharmeasy.in">
-        <img src="assets/icons/pharmeasy.png"><span>PharmEasy</span>
-      </div>
-      <div class="app-btn" data-url="https://www.practo.com">
-        <img src="assets/icons/practo.png"><span>Practo</span>
-      </div>
-      <div class="app-btn" data-url="https://www.apollo247.com">
-        <img src="assets/icons/apollo.png"><span>Apollo 24/7</span>
-      </div>
+      <div class="app-btn" data-url="https://www.1mg.com"><img src="assets/icons/1mg.png"><span>Tata 1mg</span></div>
+      <div class="app-btn" data-url="https://pharmeasy.in"><img src="assets/icons/pharmeasy.png"><span>PharmEasy</span></div>
+      <div class="app-btn" data-url="https://www.practo.com"><img src="assets/icons/practo.png"><span>Practo</span></div>
+      <div class="app-btn" data-url="https://www.apollo247.com"><img src="assets/icons/apollo.png"><span>Apollo 24/7</span></div>
+    </div>
+  </section>
+
+  <!-- 🏏 SPORTS -->
+  <section class="card sports">
+    <h2>🏏 Sports</h2>
+    <div class="grid">
+      <div class="app-btn" data-url="https://www.cricbuzz.com"><img src="assets/icons/cricbuzz.png"><span>Cricbuzz</span></div>
+      <div class="app-btn" data-url="https://www.hotstar.com/in/sports"><img src="assets/icons/hotstar.png"><span>Hotstar Sports</span></div>
+    </div>
+  </section>
+
+  <!-- 🧠 PERSONALITY -->
+  <section class="card personality">
+    <h2>🧠 Personality</h2>
+    <div class="grid">
+      <div class="app-btn" data-url="https://www.ted.com"><img src="assets/icons/ted.png"><span>TED</span></div>
+      <div class="app-btn" data-url="https://www.coursera.org"><img src="assets/icons/coursera.png"><span>Coursera</span></div>
+      <div class="app-btn" data-url="https://www.udemy.com"><img src="assets/icons/udemy.png"><span>Udemy</span></div>
     </div>
   </section>
 
