--- a/splash.html
+++ b/splash.html
@@ -1,212 +1,224 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>HarDil</title>
+<meta charset="UTF-8">
+<title>HarDil</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="theme-color" content="#4f46e5">
 
-  <!-- Mobile & Play Store friendly -->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="theme-color" content="#0b1220" />
+<style>
+/* ===============================
+   THEME (AUTO DARK / LIGHT)
+================================ */
+:root {
+  --bg: #0b1220;
+  --card: #121a33;
+  --text: #ffffff;
+  --sub: rgba(255,255,255,0.75);
+  --accent: #ff4d6d;
+}
 
-  <style>
-    * {
-      box-sizing: border-box;
-    }
+@media (prefers-color-scheme: light) {
+  :root {
+    --bg: #f6f7fb;
+    --card: #ffffff;
+    --text: #1a1a1a;
+    --sub: #555;
+    --accent: #e11d48;
+  }
+}
 
-    body {
-      margin: 0;
-      height: 100vh;
-      background: radial-gradient(circle at top, #141b33, #0b1220 60%);
-      font-family: "Segoe UI", system-ui, -apple-system, sans-serif;
-      overflow: hidden;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      color: white;
-    }
+* {
+  box-sizing: border-box;
+}
 
-    /* MAIN CONTAINER */
-    .splash {
-      position: relative;
-      width: 100%;
-      height: 100%;
-    }
+body {
+  margin: 0;
+  height: 100vh;
+  background: radial-gradient(circle at top, var(--card), var(--bg));
+  font-family: "Segoe UI", system-ui, sans-serif;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: var(--text);
+  overflow: hidden;
+}
 
-    /* FLOATING ICON GROUPS */
-    .group {
-      position: absolute;
-      display: flex;
-      gap: 14px;
-      opacity: 0;
-      transform: scale(0.8);
-      transition: all 1.4s cubic-bezier(.19,1,.22,1);
-    }
+/* ===============================
+   SCENE
+================================ */
+.scene {
+  text-align: center;
+}
 
-    .group img {
-      width: 42px;
-      height: 42px;
-      object-fit: contain;
-      filter: drop-shadow(0 6px 16px rgba(0,0,0,.6));
-    }
+/* ===============================
+   PEOPLE (SVG)
+================================ */
+.people {
+  display: flex;
+  gap: 120px;
+  justify-content: center;
+  opacity: 0;
+  animation: meet 1.8s cubic-bezier(.19,1,.22,1) forwards;
+}
 
-    /* POSITIONS */
-    .social  { top: 18%; left: 10%; }
-    .jobs    { top: 18%; right: 10%; }
-    .music   { bottom: 18%; left: 10%; }
-    .ott     { bottom: 18%; right: 10%; }
-    .travel  { top: 50%; left: 5%; }
-    .health  { top: 50%; right: 5%; }
+.person {
+  width: 56px;
+  height: 56px;
+  fill: var(--text);
+}
 
-    /* MERGE TO CENTER */
-    .center {
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%) scale(0.9);
-      opacity: 1;
-    }
+@keyframes meet {
+  to { gap: 24px; opacity: 1; }
+}
 
-    /* LOGO AREA */
-    .logo {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%) scale(0.85);
-      text-align: center;
-      opacity: 0;
-      transition: all 1.2s ease;
-    }
+/* ===============================
+   HEART LOGO (HarDil MARK)
+================================ */
+.heart {
+  margin: 14px auto;
+  width: 52px;
+  height: 52px;
+  opacity: 0;
+  animation: heartIn 1.2s ease forwards;
+  animation-delay: 1.9s;
+}
 
-    .logo h1 {
-      font-size: 52px;
-      margin: 0;
-      letter-spacing: 1px;
-      font-weight: 700;
-    }
+.heart svg {
+  width: 100%;
+  height: 100%;
+  fill: var(--accent);
+  animation: pulse 1.6s infinite ease-in-out;
+}
 
-    .logo p {
-      margin-top: 8px;
-      font-size: 14px;
-      opacity: 0.85;
-      letter-spacing: 0.3px;
-    }
+@keyframes heartIn {
+  to { opacity: 1; transform: scale(1); }
+}
 
-    /* LOADING DOTS */
-    .loader {
-      margin-top: 18px;
-      display: flex;
-      justify-content: center;
-      gap: 6px;
-    }
+@keyframes pulse {
+  0%,100% { transform: scale(0.95); }
+  50% { transform: scale(1.15); }
+}
 
-    .dot {
-      width: 6px;
-      height: 6px;
-      background: #ffffffcc;
-      border-radius: 50%;
-      animation: bounce 1.4s infinite ease-in-out;
-    }
+/* ===============================
+   SERVICES (SVG ICONS)
+================================ */
+.services {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  margin-top: 18px;
+  opacity: 0;
+  animation: fadeIn 1s ease forwards;
+  animation-delay: 3.2s;
+}
 
-    .dot:nth-child(2) { animation-delay: .15s; }
-    .dot:nth-child(3) { animation-delay: .3s; }
+.services svg {
+  width: 24px;
+  height: 24px;
+  fill: var(--text);
+  opacity: 0.85;
+  animation: float 3s ease-in-out infinite;
+}
 
-    @keyframes bounce {
-      0%, 80%, 100% { transform: scale(0); }
-      40% { transform: scale(1); }
-    }
+.services svg:nth-child(2){animation-delay:.3s}
+.services svg:nth-child(3){animation-delay:.6s}
+.services svg:nth-child(4){animation-delay:.9s}
+.services svg:nth-child(5){animation-delay:1.2s}
 
-    /* SHOW STATES */
-    .show {
-      opacity: 1;
-      transform: scale(1);
-    }
+@keyframes float {
+  50% { transform: translateY(-6px); }
+}
 
-    .logo.show {
-      opacity: 1;
-      transform: translate(-50%, -50%) scale(1);
-    }
+/* ===============================
+   LOGO
+================================ */
+.logo {
+  margin-top: 28px;
+  font-size: 48px;
+  font-weight: 700;
+  opacity: 0;
+  animation: reveal 1s ease forwards;
+  animation-delay: 4.4s;
+}
 
-  </style>
+.tagline {
+  font-size: 14px;
+  color: var(--sub);
+  margin-top: 6px;
+  opacity: 0;
+  animation: fadeIn 1s ease forwards;
+  animation-delay: 4.9s;
+}
+
+@keyframes reveal {
+  from { opacity:0; transform: scale(0.9); filter: blur(4px); }
+  to { opacity:1; transform: scale(1); filter: blur(0); }
+}
+
+@keyframes fadeIn {
+  to { opacity:1; }
+}
+
+/* ===============================
+   ACCESSIBILITY
+================================ */
+@media (prefers-reduced-motion: reduce) {
+  * { animation: none !important; }
+}
+</style>
 </head>
 
 <body>
 
-<div class="splash">
+<div class="scene">
 
-  <!-- ICON GROUPS -->
-  <div class="group social">
-    <img src="assets/icons/whatsapp.png">
-    <img src="assets/icons/instagram.png">
-    <img src="assets/icons/gmail.png">
+  <!-- PEOPLE -->
+  <div class="people">
+    <svg class="person" viewBox="0 0 24 24"><circle cx="12" cy="7" r="4"/><path d="M4 22c0-4 4-7 8-7s8 3 8 7"/></svg>
+    <svg class="person" viewBox="0 0 24 24"><circle cx="12" cy="7" r="4"/><path d="M4 22c0-4 4-7 8-7s8 3 8 7"/></svg>
   </div>
 
-  <div class="group jobs">
-    <img src="assets/icons/linkedin.png">
-    <img src="assets/icons/naukri.png">
-    <img src="assets/icons/indeed.png">
+  <!-- HEART LOGO -->
+  <div class="heart">
+    <svg viewBox="0 0 24 24">
+      <path d="M12 21s-6.7-4.4-9.3-8.2C.6 9.2 2.3 5 6.3 5c2 0 3.4 1.2 3.7 2.1.3-.9 1.7-2.1 3.7-2.1 4 0 5.7 4.2 3.6 7.8C18.7 16.6 12 21 12 21z"/>
+    </svg>
   </div>
 
-  <div class="group music">
-    <img src="assets/icons/spotify.png">
-    <img src="assets/icons/jiosaavn.png">
-    <img src="assets/icons/gaana.png">
-  </div>
-
-  <div class="group ott">
-    <img src="assets/icons/netflix.png">
-    <img src="assets/icons/hotstar.png">
-    <img src="assets/icons/youtube.png">
-  </div>
-
-  <div class="group travel">
-    <img src="assets/icons/irctc.png">
-    <img src="assets/icons/uber.png">
-  </div>
-
-  <div class="group health">
-    <img src="assets/icons/1mg.png">
-    <img src="assets/icons/pharmeasy.png">
+  <!-- SERVICES -->
+  <div class="services">
+    <svg viewBox="0 0 24 24"><path d="M4 4h16v12H5.2L4 18z"/></svg>
+    <svg viewBox="0 0 24 24"><path d="M12 3v18M3 12h18"/></svg>
+    <svg viewBox="0 0 24 24"><path d="M4 7h16v10H4z"/></svg>
+    <svg viewBox="0 0 24 24"><path d="M6 6h12l-1 12H7z"/></svg>
+    <svg viewBox="0 0 24 24"><path d="M3 12l18-9-6 18-3-6z"/></svg>
   </div>
 
   <!-- LOGO -->
-  <div class="logo" id="logo">
-    <h1>HarDil</h1>
-    <p>Family First · One Place for Everything</p>
-
-    <div class="loader">
-      <div class="dot"></div>
-      <div class="dot"></div>
-      <div class="dot"></div>
-    </div>
-  </div>
+  <div class="logo">HarDil</div>
+  <div class="tagline">Family First · One Place for Everything</div>
 
 </div>
 
 <script>
-  const groups = document.querySelectorAll(".group");
-  const logo = document.getElementById("logo");
+/* Skip splash after first launch */
+if (localStorage.getItem("hardil_launched")) {
+  window.location.replace("index.html");
+}
 
-  // Step 1: Fade in icons
-  setTimeout(() => {
-    groups.forEach(g => g.classList.add("show"));
-  }, 400);
+/* Haptic feedback (Android) */
+if (navigator.vibrate) {
+  setTimeout(() => navigator.vibrate(10), 1900);
+  setTimeout(() => navigator.vibrate(15), 3200);
+}
 
-  // Step 2: Pull icons to center
-  setTimeout(() => {
-    groups.forEach(g => g.classList.add("center"));
-  }, 2200);
-
-  // Step 3: Hide icons, show logo
-  setTimeout(() => {
-    groups.forEach(g => g.style.opacity = "0");
-    logo.classList.add("show");
-  }, 4000);
-
-  // Step 4: Enter app
-  setTimeout(() => {
-    window.location.href = "index.html";
-  }, 6200);
+/* Mark launched & redirect */
+setTimeout(() => {
+  localStorage.setItem("hardil_launched", "yes");
+  window.location.replace("index.html");
+}, 6500);
 </script>
 
 </body>
 </html>
-
