Refactor header to include brand div

--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
 
 <!-- HEADER -->
 <header class="hero">
-  <h1>HarDil</h1>
+  <div class="brand">
+    <div class="heart"></div>
+    <h1>HarDil</h1>
+  </div>
   <p>Family First · One Place for Everything</p>
 </header>
 
