Refactor social media section layout in index.html

--- a/index.html
+++ b/index.html
@@ -26,18 +26,34 @@
 <main class="app">
 
   <!-- 🌐 SOCIAL MEDIA -->
-  <section class="card social">
-    <h2>🌐 Social Media</h2>
-    <p class="section-sub">Stay connected with family & friends</p>
-    <div class="grid">
-      <div class="app-btn" data-url="https://web.whatsapp.com"><img loading="lazy" src="assets/icons/whatsapp.png" alt="WhatsApp"><span>WhatsApp</span></div>
-      <div class="app-btn" data-url="https://www.instagram.com"><img loading="lazy" src="assets/icons/instagram.png" alt="Instagram"><span>Instagram</span></div>
-      <div class="app-btn" data-url="https://mail.google.com"><img loading="lazy" src="assets/icons/gmail.png" alt="Gmail"><span>Gmail</span></div>
-      <div class="app-btn" data-url="https://web.telegram.org"><img loading="lazy" src="assets/icons/telegram.png" alt="Telegram"><span>Telegram</span></div>
-      <div class="app-btn" data-url="https://www.facebook.com"><img loading="lazy" src="assets/icons/facebook.png" alt="Facebook"><span>Facebook</span></div>
-      <div class="app-btn" data-url="https://twitter.com"><img loading="lazy" src="assets/icons/twitter.png" alt="Twitter"><span>Twitter</span></div>
+ <section class="hub-card social">
+  <div class="hub-head">
+    <h2>Social Media</h2>
+    <div class="dots">● ● ●</div>
+  </div>
+
+  <div class="hub-scroll">
+    <div class="hub-app">
+      <img src="assets/icons/whatsapp.png">
+      <span>WhatsApp</span>
     </div>
-  </section>
+    <div class="hub-app">
+      <img src="assets/icons/instagram.png">
+      <span>Instagram</span>
+    </div>
+    <div class="hub-app">
+      <img src="assets/icons/gmail.png">
+      <span>Gmail</span>
+    </div>
+    <div class="hub-app">
+      <img src="assets/icons/telegram.png">
+      <span>Telegram</span>
+    </div>
+  </div>
+
+  <button class="hub-more">Social Media →</button>
+</section>
+
 
   <!-- 💼 JOBS -->
   <section class="card jobs">
