Refactor social media section layout and content

--- a/index.html
+++ b/index.html
@@ -25,34 +25,21 @@
 
 <main class="app">
 
-  <!-- 🌐 SOCIAL MEDIA -->
- <section class="hub-card social">
-  <div class="hub-head">
-    <h2>Social Media</h2>
-    <div class="dots">● ● ●</div>
-  </div>
+ <!-- 🌐 SOCIAL MEDIA -->
+<section class="card social reveal">
+  <h2>🌐 Social Media</h2>
+  <p class="section-sub">Stay connected with family & friends</p>
 
-  <div class="hub-scroll">
-    <div class="hub-app">
-      <img src="assets/icons/whatsapp.png">
-      <span>WhatsApp</span>
-    </div>
-    <div class="hub-app">
-      <img src="assets/icons/instagram.png">
-      <span>Instagram</span>
-    </div>
-    <div class="hub-app">
-      <img src="assets/icons/gmail.png">
-      <span>Gmail</span>
-    </div>
-    <div class="hub-app">
-      <img src="assets/icons/telegram.png">
-      <span>Telegram</span>
-    </div>
+  <div class="grid">
+    <div class="app-btn"><img src="assets/icons/whatsapp.png"><span>WhatsApp</span></div>
+    <div class="app-btn"><img src="assets/icons/instagram.png"><span>Instagram</span></div>
+    <div class="app-btn"><img src="assets/icons/gmail.png"><span>Gmail</span></div>
+    <div class="app-btn"><img src="assets/icons/telegram.png"><span>Telegram</span></div>
+    <div class="app-btn"><img src="assets/icons/facebook.png"><span>Facebook</span></div>
+    <div class="app-btn"><img src="assets/icons/twitter.png"><span>Twitter</span></div>
   </div>
-
-  <button class="hub-more">Social Media →</button>
 </section>
+
 
 
   <!-- 💼 JOBS -->
